{
    "name": "SpaceShipControl",
    "maps": [
        {
            "name": "MoveAndShoot",
            "id": "7031b89a-636a-411b-b820-c5f22ff20fa2",
            "actions": [
                {
                    "name": "StartDrag",
                    "type": "Button",
                    "id": "9f3c8b78-aeb2-4d2c-8557-87a7e1ac95af",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "7a41ca4c-c49e-4d85-b43a-73aa3362df65",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "60196d2c-2fd0-46ad-bf43-6a02f212dbae",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "SpaceShip",
                    "action": "StartDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f3409c4-7711-4015-acb8-1c53f0b88123",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "SpaceShip",
                    "action": "StartDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4aee2c3b-bd2b-4658-8a01-55075cc8a51d",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "SpaceShip",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0bd659a8-90a4-4c8a-be4e-a1fcc595a86e",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "SpaceShip",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "SpaceShip",
            "bindingGroup": "SpaceShip",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}